fixed background image issue on mobile

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -46,11 +46,21 @@ h3 {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 275%;
     z-index: -1;
 }
 
-.sunny #background::before {
+#background2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 185%;
+    z-index: -1;
+}
+
+.sunny #background::before,
+.sunny #background2::before {
     content: "";
     position: absolute;
     top: 0;
@@ -61,9 +71,11 @@ h3 {
     background-size: cover;
     background-repeat: no-repeat;
     filter: blur(2px);
+    background-attachment: fixed;
 }
 
-.rainy #background::before {
+.rainy #background::before,
+.rainy #background2::before {
     content: "";
     position: absolute;
     top: 0;
@@ -74,10 +86,13 @@ h3 {
     background-size: cover;
     background-repeat: no-repeat;
     filter: blur(2px);
+    background-attachment: fixed;
 }
 
 .cloudy #background::before,
-.clear #background::before {
+.clear #background::before,
+.cloudy #background2::before,
+.clear #background2::before {
     content: "";
     position: absolute;
     top: 0;
@@ -88,6 +103,7 @@ h3 {
     background-size: cover;
     background-repeat: no-repeat;
     filter: blur(2px);
+    background-attachment: fixed;
 }
 
 section.weather,
